--- a/JatxMusic/MusicTransmitterAndroid/res/layout/activity_music_transmitter.xml
+++ b/JatxMusic/MusicTransmitterAndroid/res/layout/activity_music_transmitter.xml
@@ -20,80 +20,35 @@
         android:background="@color/black"
         />
     
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:indeterminate="false"
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/progress_height" 
+        android:progressDrawable="@drawable/progress"
+        />
+    
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/black"
+        />
+    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/button_size"
         android:orientation="horizontal"
         >
         
-        <ImageButton
-            android:id="@+id/play"
-            android:layout_width="@dimen/button_size"
-        	android:layout_height="@dimen/button_size"
-        	android:src="@drawable/ic_play"
-        	android:scaleType="fitXY"
-        	android:background="@color/white"
-            />
-        
-        <ImageButton
-            android:id="@+id/pause"
-            android:layout_width="@dimen/button_size"
-        	android:layout_height="@dimen/button_size"
-        	android:src="@drawable/ic_pause"
-        	android:scaleType="fitXY"
-        	android:visibility="gone"
-        	android:background="@color/white"
-            />
-        
-        <View
-            android:layout_width="0dp"
-            android:layout_height="@dimen/button_size"
-            android:layout_weight="1"
-            android:background="@color/white"
-            />
-        
-        <ImageButton
-            android:id="@+id/vol_down"
-            android:layout_width="@dimen/button_size"
-        	android:layout_height="@dimen/button_size"
-        	android:src="@drawable/ic_down"
-        	android:scaleType="fitXY"
-        	android:background="@color/white"
-            />
-     
-        <TextView
-            android:id="@+id/vol_label"
-            android:layout_width="@dimen/volume_label_width"
-            android:layout_height="@dimen/button_size"
-            android:textSize="@dimen/volume_label_text"
-            android:gravity="center"
-            android:text="100%"
-            android:textColor="@color/black"
-            />
-        
-        <ImageButton
-            android:id="@+id/vol_up"
-            android:layout_width="@dimen/button_size"
-        	android:layout_height="@dimen/button_size"
-        	android:src="@drawable/ic_up"
-        	android:scaleType="fitXY"
-        	android:background="@color/white"
-            />
-        
-        <View
-            android:layout_width="0dp"
-            android:layout_height="@dimen/button_size"
-            android:layout_weight="1"
-            android:background="@color/white"
-            />
-        
         <ImageView
             android:id="@+id/wifi_ok"
             android:layout_width="@dimen/button_size"
         	android:layout_height="@dimen/button_size"
+        	android:padding="@dimen/button_padding"
         	android:src="@drawable/ic_wifi_ok"
         	android:scaleType="fitXY"
-        	android:background="@color/white"
+        	android:background="@color/grayE"
         	android:visibility="gone"
             />
         
@@ -101,11 +56,101 @@
             android:id="@+id/wifi_no"
             android:layout_width="@dimen/button_size"
         	android:layout_height="@dimen/button_size"
+        	android:padding="@dimen/button_padding"
         	android:src="@drawable/ic_wifi_no"
         	android:scaleType="fitXY"
-        	android:background="@color/white"
+        	android:background="@color/grayE"
         	android:visibility="visible"
             />
+        
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/grayC"
+            />
+        
+        <ImageButton
+            android:id="@+id/rev"
+            android:layout_width="@dimen/button_size"
+        	android:layout_height="@dimen/button_size"
+        	android:padding="@dimen/button_padding"
+        	android:src="@drawable/ic_rev"
+        	android:scaleType="fitXY"
+        	android:background="@color/grayC"
+            />
+        
+        <ImageButton
+            android:id="@+id/play"
+            android:layout_width="@dimen/button_size"
+        	android:layout_height="@dimen/button_size"
+        	android:padding="@dimen/button_padding"
+        	android:src="@drawable/ic_play"
+        	android:scaleType="fitXY"
+        	android:background="@color/grayC"
+            />
+        
+        <ImageButton
+            android:id="@+id/pause"
+            android:layout_width="@dimen/button_size"
+        	android:layout_height="@dimen/button_size"
+        	android:padding="@dimen/button_padding"
+        	android:src="@drawable/ic_pause"
+        	android:scaleType="fitXY"
+        	android:visibility="gone"
+        	android:background="@color/grayC"
+            />
+        
+        <ImageButton
+            android:id="@+id/fwd"
+            android:layout_width="@dimen/button_size"
+        	android:layout_height="@dimen/button_size"
+        	android:padding="@dimen/button_padding"
+        	android:src="@drawable/ic_fwd"
+        	android:scaleType="fitXY"
+        	android:background="@color/grayC"
+            />
+        
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/grayC"
+            />
+        
+        <ImageButton
+            android:id="@+id/vol_down"
+            android:layout_width="@dimen/button_size"
+        	android:layout_height="@dimen/button_size"
+        	android:padding="@dimen/button_padding"
+        	android:src="@drawable/ic_down"
+        	android:scaleType="fitXY"
+        	android:background="@color/grayE"
+            />
+     
+        <TextView
+            android:id="@+id/vol_label"
+            android:layout_width="@dimen/volume_label_width"
+            android:layout_height="@dimen/button_size"
+            android:padding="@dimen/button_padding"
+            android:textSize="@dimen/volume_label_text"
+            android:gravity="center"
+            android:text="100%"
+            android:background="@color/grayE"
+            android:textColor="@color/black"
+            />
+        
+        <ImageButton
+            android:id="@+id/vol_up"
+            android:layout_width="@dimen/button_size"
+        	android:layout_height="@dimen/button_size"
+        	android:padding="@dimen/button_padding"
+        	android:src="@drawable/ic_up"
+        	android:scaleType="fitXY"
+        	android:background="@color/grayE"
+            />
+        
+        
     </LinearLayout>
 
     <View
