--- a/JatxMusic/MusicTransmitterAndroid/res/values/colors.xml
+++ b/JatxMusic/MusicTransmitterAndroid/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <item name="black" type="color">#FF000000</item>
     <item name="white" type="color">#FFFFFFFF</item>
+    <item name="grayC" type="color">#FFCCCCCC</item>
+    <item name="grayE" type="color">#FFEEEEEE</item>
 </resources>
