--- a/JatxMusic/MusicTransmitterAndroid/res/values/dimens.xml
+++ b/JatxMusic/MusicTransmitterAndroid/res/values/dimens.xml
@@ -4,14 +4,17 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     
-    <dimen name="button_size">50dp</dimen>
-    <dimen name="volume_label_width">100dp</dimen>
+    <dimen name="button_size">42dp</dimen>
+    <dimen name="button_padding">3dp</dimen>
+    <dimen name="volume_label_width">70dp</dimen>
     <dimen name="song_label_height">65dp</dimen>
 
-    <dimen name="volume_label_text">25dp</dimen>
+    <dimen name="volume_label_text">22dp</dimen>
     <dimen name="song_label_text">14dp</dimen>
     
     <dimen name="song_entry_title">20dp</dimen>
     <dimen name="song_entry_artist">15dp</dimen>
+    
+    <dimen name="progress_height">20dp</dimen>
     
 </resources>
