--- a/JatxMusic/MusicReceiverAndroid/res/layout/activity_music_receiver.xml
+++ b/JatxMusic/MusicReceiverAndroid/res/layout/activity_music_receiver.xml
@@ -2,7 +2,10 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+    android:layout_marginRight="@dimen/activity_horizontal_margin"
+    android:layout_marginTop="@dimen/activity_vertical_margin"
+    android:layout_marginBottom="@dimen/activity_vertical_margin"
     >
 
     <EditText
