--- a/JatxMusic/MusicReceiverAndroid/res/layout/activity_music_receiver.xml
+++ b/JatxMusic/MusicReceiverAndroid/res/layout/activity_music_receiver.xml
@@ -10,18 +10,19 @@
 
     <EditText
         android:id="@+id/hostname"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" 
         android:textSize="35sp"
         android:textColor="@color/black" 
         android:background="@color/light_gray"
         android:padding="5dp"
         android:layout_margin="5dp"
+        android:enabled="false"
         />
            
     <Button
         android:id="@+id/toogle"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="35sp"
         android:text="@string/string_start"
