--- a/JatxMusic/MusicTransmitterAndroid/res/menu/menu_music_transmitter.xml
+++ b/JatxMusic/MusicTransmitterAndroid/res/menu/menu_music_transmitter.xml
@@ -52,7 +52,9 @@
         	<group>
         	    <item android:id="@+id/item_review_app" android:title="@string/item_review_app"></item>
         	    <item android:id="@+id/item_receiver_android" android:title="@string/item_receiver_android"></item>
-        	    <item android:id="@+id/item_javafx_version" android:title="@string/item_javafx_version"></item>
+        	    <!-- <item android:id="@+id/item_javafx_version" android:title="@string/item_javafx_version"></item> -->
+        	    <item android:id="@+id/item_receiver_javafx" android:title="@string/item_receiver_javafx"></item> 
+        	    <item android:id="@+id/item_transmitter_javafx" android:title="@string/item_transmitter_javafx"></item>
         	    <item android:id="@+id/item_source_code" android:title="@string/item_source_code"></item>
         	    <item android:id="@+id/item_dev_site" android:title="@string/item_dev_site"></item>
 	    	</group>
